outputs/tsp_constructive-constructive/mcts-ahd/2025-09-28_08-09-19/evaluations/problem_eval-5772310062344438749_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance later, using a dynamic lookahead depth (up to 5 steps) to balance local decisions with global connectivity, with weights scaled by remaining nodes and progress, and a scoring function that heavily penalizes long distances while rewarding high centrality and connectivity.}
                                                                                                                                                                                                                                                                                              ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance later, using a dynamic lookahead depth (up to 5 steps) to balance local decisions with global connectivity, with weights scaled by remaining nodes and progress, and a scoring function that heavily penalizes long distances while rewarding high centrality and connectivity.}
                                                                                                                                                                                                                                                                                              ^
SyntaxError: unmatched '}'
